[gd_scene load_steps=3 format=3 uid="uid://b2mqdrvgix4wh"]

[ext_resource type="Script" path="res://Scripts/Component/sfx_component.gd" id="1_5p51w"]
[ext_resource type="PackedScene" uid="uid://bd4qgmln5hp64" path="res://Components/sfx_manager.tscn" id="2_epkcw"]

[node name="SFXComponent" type="Node3D"]
script = ExtResource("1_5p51w")

[node name="LoopingSFX" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="PlayOnce" type="AudioStreamPlayer3D" parent="."]
max_distance = 25.0
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Ambience" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Ambience"

[node name="SFXManager" parent="." instance=ExtResource("2_epkcw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0398226, 0, -0.00077033)

[connection signal="finished" from="LoopingSFX" to="." method="_on_looping_sfx_finished"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
[connection signal="finished" from="Ambience" to="." method="_on_ambience_finished"]
